Show two buttons at the end of the SplitScreen tabs for closing and going fullscreen. Take care that the buttons are correctly aligned, the tabs scroll  and the border of the underlineNav is continued. Currently the close button is not working yet. (wip)

--- a/frontend/src/global_styles/primer/_overrides.sass
+++ b/frontend/src/global_styles/primer/_overrides.sass
@@ -53,7 +53,7 @@ ul.tabnav-tabs
   margin-bottom: 12px
 
   &-body
-    margin-left: 0
+    margin-left: 12px
 
 /* Remove margin-left: 2rem from Breadcrumbs */
 #breadcrumb,
